feat(nav): added base style

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-html {
+* {
+    box-sizing: border-box;
+}
+
+:root {
     font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+}
+
+
+body {
+    margin: 0;
+    padding-top: 7,75rem;
+}
+
+
+ul {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+    
+}
+
+.navbar {
+    position: fixed;
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    align-items: center;
+    top: 0;
+    left: 0;
+
+    width: 100vw;
+    height: 7,75rem;
+    padding: 0 1rem;
+
+    background-color: black;
+    color: white;
+}
+
+.navbar__links {
+    justify-self: end;
+}
+li {
+    margin-right: 1rem;
 }
