--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 :root {
+    --color-primary: #ffc500;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+
 }
 
 
 body {
     margin: 0;
-    padding-top: 7,75rem;
+    padding-top: 7.75rem;
 }
 
 
@@ -25,16 +27,15 @@ ul {
 
 .navbar {
     position: fixed;
-    display: grid;
+    z-index: 1;
+    display:grid;
     grid-template-columns: 1fr 9fr;
     align-items: center;
     top: 0;
     left: 0;
-
     width: 100vw;
     height: 7,75rem;
     padding: 0 1rem;
-
     background-color: black;
     color: white;
 }
@@ -42,6 +43,37 @@ ul {
 .navbar__links {
     justify-self: end;
 }
-li {
-    margin-right: 1rem;
+.navbar__links li {
+    font-size: 0.875rem;
+    margin-right: 3rem;
+    text-transform: uppercase;
+}
+
+.navbar__links a {
+    font-weight: 300;
+    color: white;
+    text-decoration: none;
+}
+
+.navbar__links a:hover {
+    color: var(--color-primary);
+}
+
+
+.logo-studion {
+    font-size: 2.375rem;
+    font-weight: 900;
+    line-height: 1ch;
+    text-transform: uppercase;
+    text-align: right;
+}
+
+.logo-studion__subtitle {
+    display: block;
+    font-size: 0.875rem;
+    font-weight: 300;
+}
+
+.copy--primary {
+    color: var(--color-primary);
 }
