--- a/src/style.css
+++ b/src/style.css
@@ -1,142 +1,226 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap');
-
 * {
-    box-sizing: border-box;
-}
-
-:root {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    --color-primary: #ffc500;
-    --default-padding: 1rem;
-
-}
-
-
-body {
     margin: 0;
-    padding-top: 7.1rem;
+    padding: 0;
+    font-family: Montserrat;
 }
 
+nav {
+    width: 80%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-around;
+    background-color: #999;
+}
+
+h1 {
+    color: #fff;
+    font-size: 40px;
+    height: 50px;
+    font-weight: 900;
+    letter-spacing: -0.8px;
+    text-transform: uppercase;
+}
+
+.accent {
+    color: #EAAB0A;
+}
+
+.subtitle {
+    display: block;
+    margin-top: -5px;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
 
 ul {
     display: flex;
     list-style: none;
-    padding-left: 0;
-    
-}
-
-.navbar {
-    position: fixed;
-    z-index: 1;
-    display:grid;
-    grid-template-columns: 1fr 9fr;
+    height: 50px;
     align-items: center;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 7,75rem;
-    padding: 0 1rem;
-    background-color: black;
-    color: white;
 }
 
-.navbar__links {
-    justify-self: end;
-}
-.navbar__links li {
-    font-size: 0.875rem;
-    margin-right: 3rem;
-    text-transform: uppercase;
-}
-
-.navbar__links a {
-    font-weight: 300;
-    color: white;
+a {
     text-decoration: none;
-}
-
-.navbar__links a:hover {
-    color: var(--color-primary);
-}
-
-
-.logo-studion {
-    font-size: 2.375rem;
-    font-weight: 900;
-    line-height: 1ch;
-    text-transform: uppercase;
-    text-align: right;
-}
-
-.logo-studion__subtitle {
-    display: block;
-    font-size: 0.875rem;
-    font-weight: 300;
-}
-
-.copy--primary {
-    color: var(--color-primary);
-}
-
-#slider {
-    background-color: #000;
-    color:#fff;
-}
-
-.slide {
-    position: relative;
-    height: calc(100vh - 7.75rem);
-}
-
-.slide__background-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.slide__copy {
-    position: absolute;
-    top: 6.25rem;
-    left: 50vw;
-}
-
-.slide__copy h6 {
-    font-size:.9375rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: .1875rem;
-}
-
-.slide__copy h2 {
-    font-size: 6.25rem;
-    text-transform: uppercase;
-    line-height: 6.25rem;
-}
-
-.slide__copy h2 span {
-    display: block;
-}
-
-.btn {
-    cursor: pointer;
-    padding: 1rem 2.5rem;
-    border: .125rem solid #fff;
-    border-radius: 5rem;
-    color: var(--color-primary);
-    background: unset;
-    font-size: .9375rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: 0.3s all ease;
-}
-
-.btn:hover,
- .btn:active,
-  .btn:focus {
-    border-color: var(--color-primary);
-    background-color: var(--color-primary);
     color: #fff;
-  }
+    font-size: 15px;
+    font-weight: 500;
+    margin-left: 30px;
+    text-transform: uppercase;
+}
 
+a:hover {
+    color: #FFC501;
+}
+
+.selected {
+    color: #EAAB0A;
+}
+
+header {
+    background: url(./images/header.jpeg), lightgray 50% / cover no-repeat;
+    width: 100%;
+    height: 600px;
+    margin-top: -90px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+header > h2 {
+    color: #FFC501;
+    font-size: 120px;
+    font-weight: 900;
+    margin-top: 180px;
+    margin-right: 320px;
+}
+
+header > p {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 400;
+    width: 645px;
+    height: 67px;
+    margin-right: 270px;
+}
+
+.section1 {
+    position: relative;
+    width: 100%;
+    height: 715px;
+    padding-top: 50px;
+}
+
+.section1 > h4 {
+    position: absolute;
+    font-size: 25px;
+    font-weight: 800;
+    width: 430px;
+    top: 150px;
+    left: 350px;
+}
+
+.section1 > p {
+    width: 494px;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.section1 > .paragrafo1 {
+    position: absolute;
+    top: 280px;
+    left: 350px;
+}
+
+.section1 > .paragrafo2 {
+    position: absolute;
+    top: 420px;
+    left: 350px;
+}
+
+.section1 > div {
+    background: url(./images/linhas.svg) center no-repeat;
+    position: absolute;
+    right: 150px;
+}
+
+.pessoa {
+    margin-left: 180px;
+}
+
+.section2 {
+    background: #FFC501;
+    height: 562px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.section2 > h4 {
+    font-size: 25px;
+    font-weight: 800;
+}
+
+.section3 {
+    height: 837;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer {
+    background: #000;
+    width: 100%;
+    height: 300px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-transform: uppercase;
+}
+
+footer > div {
+    display: flex;
+    justify-content: space-between;
+    width: 1149.402px;
+}
+
+footer > div > form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer > div > form > label {
+    display: block;
+    width: 160px;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+footer > div > form > input {
+    width: 312px;
+    height: 50px;
+    background: #EAAB0A;
+    border: none;
+    padding: 0 5px;
+}
+
+footer > div > form > input::placeholder {
+    color: #fff;
+    font-size: 15px;
+    font-weight: 900;
+    letter-spacing: -0.3px;
+    text-transform: uppercase;
+}
+
+footer > div > form > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    width: 60px;
+    height: 50px;
+    cursor: pointer;
+}
+
+footer > hr {
+    width: 1149.402px;
+    height: 0px;
+    stroke-width: 0.5px;
+    stroke: #fff;
+}
+
+footer > p {
+    font-size: 15px;
+    font-weight: 400;
+    letter-spacing: -0.3px;
+    text-transform: uppercase;
+}
+
+footer > p > small > span {
+    color: #EAAB0A;
+}
